[package]
name = "easy_mdlwr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
bson = { version = "2.15.0", features = ["chrono", "chrono-0_4", "serde_with"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
hex-literal = "0.4.1"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.27"
mongodb = "3.2.3"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
